Image Will Not Align Center

--- a/Tutorial E-Portfolio-Redo/styles.css
+++ b/Tutorial E-Portfolio-Redo/styles.css
@@ -95,6 +95,11 @@ nav {
 
 }
 
+.about-me__info {
+    display: flex;
+    flex-direction: column;   
+}
+
 .about-me__info--container {
     display: flex;
     flex-direction: column;
@@ -131,3 +136,19 @@ nav {
     margin-bottom: 28px;
 }
 
+.about-me__link {
+    font-size: 20px;
+    color: #245337;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.about-me__img {
+    width: 100%;
+}
