--- a/Tutorial E-Portfolio-Redo/styles.css
+++ b/Tutorial E-Portfolio-Redo/styles.css
@@ -6,6 +6,17 @@
     box-sizing: border-box;
 }   
 
+/* ================================================== */
+html {
+    background-color: #d8f4fa;
+}
+
+/* CONNNECTED REFERENCE */
+section:nth-child(even) {
+    background-color: #d4e7eb9d;
+}
+/* =================================================== */
+
 h1, h2, h3, h4, h5 , h6, span {
     color: #242424;
     text-align: center;
@@ -33,6 +44,10 @@ li {
     flex: 1;
 }
 
+.container {
+    padding: 50px 0;
+}
+
 .row {
     width: 100%;
     max-width: 800px;
@@ -41,6 +56,10 @@ li {
 
 .text--cool-green {
     color: #139748;
+}
+
+.section__title {
+    margin-bottom: 20px;
 }
 
 /* NAVIGATION BAR */
@@ -151,4 +170,61 @@ nav {
 
 .about-me__img {
     width: 100%;
+}
+
+/* TECH - STACK */
+
+.language {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.language__img {
+    width: 100%;
+    max-width: 100px;
+}
+
+
+/* =========================*/
+/* MY ATTEMPT TO SIZE IT */
+.language__img--SQL-fix {
+    width: 100%;
+    max-width: 90px;
+}
+/*==========================*/
+
+.language:hover .language__img{
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+    transition: all 150ms;
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+
+.language__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.language__name {
+    position: absolute;
+    bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+    opacity: 0;
+}
+
+.language:hover .language__name {
+    transform: scale(1);
+    opacity: 1;
+
 }
