--- a/Tutorial E-Portfolio-Redo/styles.css
+++ b/Tutorial E-Portfolio-Redo/styles.css
@@ -133,7 +133,7 @@ nav {
     height: 100px;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.24);
     margin-bottom: 28px;
 
 }
@@ -189,9 +189,12 @@ nav {
 
 /* =========================*/
 /* MY ATTEMPT TO SIZE IT */
-.language__img--SQL-fix {
-    width: 100%;
-    max-width: 90px;
+.SQL-fix {
+    width: 85%;
+}
+
+.React-fix {
+    scale: 1.15;
 }
 /*==========================*/
 
@@ -226,5 +229,64 @@ nav {
 .language:hover .language__name {
     transform: scale(1);
     opacity: 1;
+
+}
+
+/* PROJECT LANDING STRIP */
+
+.project__img {
+    width: 100%;
+    transition: all 500ms ease;
+}
+
+.project__wrapper {
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+.project__wrapper:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: opacity 450ms ease;
+    /* This Changes the layer (move foward move back) */
+    z-index: 2;
+}
+
+.project:hover .project__wrapper:before {
+    opacity: 0.7;
+}
+
+.project:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(5px);
+}
+
+.project__list {
+    padding-top: 40px;
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(-50%);
+    max-width: 550px;
+    z-index: 3;
+}
+
+.project__description--title,
+.project__description--para,
+.project__description--link,
+.project__description--sub-title {
+    text-align: left;
+    color: #fff;
 
 }
