--- a/Tutorial E-Portfolio-Redo/styles.css
+++ b/Tutorial E-Portfolio-Redo/styles.css
@@ -32,6 +32,10 @@ p {
     font-size: 16px;
 }
 
+a {
+    text-decoration: none;
+}
+
 li {
     list-style-type: none;
 }
@@ -81,7 +85,6 @@ nav {
 .nav__link--anchor {
     margin: 0 12px;
     color: #242424;
-    text-decoration: none;
     font-weight: 700;
 }
 
@@ -158,7 +161,6 @@ nav {
 .about-me__link {
     font-size: 20px;
     color: #245337;
-    text-decoration: none;
     padding: 0 16px;
 }
 
@@ -234,6 +236,14 @@ nav {
 
 /* PROJECT LANDING STRIP */
 
+.project {
+    margin-bottom:  135px;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
+
 .project__img {
     width: 100%;
     transition: all 500ms ease;
@@ -269,6 +279,11 @@ nav {
     filter: blur(5px);
 }
 
+.project:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
 .project__list {
     padding-top: 40px;
 }
@@ -277,9 +292,24 @@ nav {
     position: absolute;
     top: 50%;
     left: 90px;
-    transform: translateY(-50%);
+    transform: translateY(100%);
     max-width: 550px;
     z-index: 3;
+    opacity: 0;
+    transition: transform 450ms, opacity 300ms;
+}
+
+.project__description--title {
+    font-size: 40px;
+}
+
+.project__description--para {
+    margin: 16px 0;
+}
+
+.project__description--link {
+    font-size: 20px;
+    margin-right: 16px;
 }
 
 .project__description--title,
@@ -290,3 +320,53 @@ nav {
     color: #fff;
 
 }
+
+/* FOOTER */
+
+footer {
+    background-color: #242424;
+}
+
+.footer__social--list {
+    margin-bottom: 28px;
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__row {
+    padding: 8% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
+
+.footer__social--link,
+.footer_copyright,
+.footer__logo--popper {
+    color: white;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+}
+
+.footer__anchor {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.footer__anchor:hover .footer__logo__popper {
+    transform: translateX(60px);
+}
+
